--- a/index.html
+++ b/index.html
@@ -1,18 +1,285 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <title>KRUNIKI</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>KRUNIKI Academy</title>
+  <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+
+  <style>
+    :root{
+      --bg:#0b0b0c;
+      --card:#121214;
+      --text:#f2f2f2;
+      --muted:#b9b9b9;
+      --line:rgba(255,255,255,.12);
+      --gold:rgba(219,190,123,.95);
+      --soft:rgba(255,255,255,.06);
+      --max:980px;
+      --radius:20px;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,"Noto Sans Thai","Noto Sans",sans-serif;
+      background: radial-gradient(1200px 600px at 50% -10%, rgba(219,190,123,.14), transparent 60%),
+                  radial-gradient(900px 400px at 20% 10%, rgba(255,255,255,.06), transparent 55%),
+                  var(--bg);
+      color:var(--text);
+      line-height:1.6;
+    }
+    a{color:inherit}
+    .wrap{max-width:var(--max); margin:0 auto; padding:0 20px}
+    header{
+      position:sticky; top:0; z-index:10;
+      backdrop-filter: blur(10px);
+      background: rgba(11,11,12,.55);
+      border-bottom:1px solid var(--line);
+    }
+    .nav{
+      display:flex; align-items:center; justify-content:space-between;
+      padding:14px 0;
+      gap:12px;
+    }
+    .brand{
+      display:flex; align-items:center; gap:10px; text-decoration:none;
+      font-weight:700; letter-spacing:.3px;
+    }
+    .dot{width:8px;height:8px;border-radius:999px;background:var(--gold); box-shadow:0 0 22px rgba(219,190,123,.55)}
+    .menu{display:flex; gap:16px; flex-wrap:wrap; justify-content:flex-end}
+    .menu a{
+      text-decoration:none; color:var(--muted);
+      font-size:14px; padding:8px 10px; border-radius:999px;
+    }
+    .menu a:hover{background:var(--soft); color:var(--text)}
+    .hero{padding:34px 0 26px}
+    .banner{
+      width:100%;
+      border-radius:var(--radius);
+      overflow:hidden;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.02);
+      box-shadow: 0 18px 60px rgba(0,0,0,.45);
+    }
+    .banner img{display:block; width:100%; height:auto}
+    .hero h1{
+      margin:22px 0 8px;
+      font-size:42px; line-height:1.15;
+      letter-spacing:.6px;
+    }
+    .tagline{
+      color:var(--muted);
+      font-size:16px;
+      margin:0 0 18px;
+    }
+    .pill{
+      display:inline-flex; align-items:center; gap:10px;
+      padding:10px 14px;
+      border:1px solid var(--line);
+      border-radius:999px;
+      background:rgba(255,255,255,.03);
+      color:var(--muted);
+      font-size:14px;
+    }
+    .ctaRow{display:flex; gap:12px; flex-wrap:wrap; margin-top:16px}
+    .btn{
+      display:inline-flex; align-items:center; justify-content:center;
+      padding:12px 16px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.04);
+      text-decoration:none;
+      font-weight:600;
+      font-size:14px;
+    }
+    .btn.primary{
+      border-color: rgba(219,190,123,.55);
+      background: linear-gradient(180deg, rgba(219,190,123,.18), rgba(255,255,255,.03));
+    }
+    .btn:hover{transform:translateY(-1px)}
+    section{padding:26px 0}
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap:14px;
+      margin-top:14px;
+    }
+    .card{
+      grid-column: span 6;
+      background:rgba(18,18,20,.72);
+      border:1px solid var(--line);
+      border-radius:var(--radius);
+      padding:18px 18px 16px;
+    }
+    .card h3{margin:0 0 6px; font-size:18px}
+    .card p{margin:0; color:var(--muted); font-size:14px}
+    .card small{color:rgba(219,190,123,.92)}
+    .block{
+      background:rgba(18,18,20,.52);
+      border:1px solid var(--line);
+      border-radius:var(--radius);
+      padding:18px;
+    }
+    .titleRow{
+      display:flex; align-items:baseline; justify-content:space-between; gap:12px; flex-wrap:wrap;
+      border-bottom:1px solid var(--line);
+      padding-bottom:10px;
+      margin-bottom:12px;
+    }
+    h2{margin:0; font-size:22px}
+    .sub{color:var(--muted); font-size:14px}
+    ul{margin:10px 0 0; padding-left:18px; color:var(--muted)}
+    li{margin:6px 0}
+    footer{
+      border-top:1px solid var(--line);
+      padding:22px 0 34px;
+      color:var(--muted);
+      font-size:13px;
+    }
+    .footRow{display:flex; justify-content:space-between; flex-wrap:wrap; gap:10px}
+    .links{display:flex; gap:12px; flex-wrap:wrap}
+    .links a{color:var(--muted); text-decoration:none}
+    .links a:hover{color:var(--text)}
+    @media (max-width: 760px){
+      .card{grid-column: span 12}
+      .hero h1{font-size:34px}
+    }
+  </style>
 </head>
-<body style="font-family: sans-serif; background:#111; color:#fff; text-align:center; padding:60px">
 
-  <h1>KRUNIKI</h1>
-  <p>Heart Awakening · Self-Healing · Conscious Learning</p>
+<body>
+  <header>
+    <div class="wrap">
+      <div class="nav">
+        <a class="brand" href="#top">
+          <span class="dot"></span>
+          <span>KRUNIKI</span>
+        </a>
+        <nav class="menu">
+          <a href="#about">เกี่ยวกับ</a>
+          <a href="#offerings">บริการ</a>
+          <a href="#resources">Resources</a>
+          <a href="#contact">ติดต่อ</a>
+        </nav>
+      </div>
+    </div>
+  </header>
 
-  <p style="margin-top:40px; opacity:0.7">
-    เว็บไซต์กำลังอยู่ระหว่างการจัดเตรียมอย่างอ่อนโยน 🤍
-  </p>
+  <main id="top">
+    <div class="wrap">
+      <div class="hero">
+        <!-- Banner: ต้องมีไฟล์ home-banner.png อยู่ใน repo -->
+        <div class="banner">
+          <img src="home-banner.png" alt="KRUNIKI Home Banner" />
+        </div>
 
+        <h1>KRUNIKI</h1>
+        <p class="tagline">Heart Awakening • Self-Healing • Conscious Learning</p>
+
+        <div class="pill">เว็บไซต์กำลังอยู่ระหว่างการจัดเตรียมอย่างอ่อนโยน 🤍</div>
+
+        <div class="ctaRow">
+          <a class="btn primary" href="#offerings">ดูสิ่งที่มีในตอนนี้</a>
+          <a class="btn" href="#contact">ช่องทางติดต่อ</a>
+        </div>
+      </div>
+
+      <section id="about">
+        <div class="titleRow">
+          <h2>พื้นที่เรียนรู้ของหัวใจ</h2>
+          <div class="sub">A gentle space to return to yourself.</div>
+        </div>
+
+        <div class="block">
+          <p style="margin:0;color:var(--muted)">
+            ที่นี่คือพื้นที่ของ KRUNIKI สำหรับการเยียวยาใจอย่างเป็นระบบ ผ่านการฝึกสติ ความนิ่ง
+            และการกลับมาเชื่อมต่อหัวใจของตัวเองอย่างอ่อนโยน — แบบที่ “ทำได้จริงในชีวิตประจำวัน”
+          </p>
+        </div>
+      </section>
+
+      <section id="offerings">
+        <div class="titleRow">
+          <h2>สิ่งที่คุณจะพบที่นี่</h2>
+          <div class="sub">What you’ll find here</div>
+        </div>
+
+        <div class="grid">
+          <div class="card">
+            <small>20-Minute Session</small>
+            <h3>KRUNIKI Heart Awakening — Session 20 นาที</h3>
+            <p>พื้นที่ปลอดภัยสำหรับการรับฟังใจ เยียวยา และกลับสู่ศูนย์กลางภายใน</p>
+          </div>
+
+          <div class="card">
+            <small>Programs</small>
+            <h3>โปรแกรม Self-Healing และการเรียนรู้แบบมีผู้ชี้ทาง</h3>
+            <p>เส้นทางเยียวยาอย่างเป็นระบบ ผ่านสติ ลมหายใจ และความเข้าใจตนเอง</p>
+          </div>
+
+          <div class="card">
+            <small>Practices</small>
+            <h3>การฝึกความนิ่งและลมหายใจอย่างลึกซึ้ง</h3>
+            <p>Stillness-based &amp; Breath-based Practices เพื่อปรับสมดุลระบบประสาท</p>
+          </div>
+
+          <div class="card">
+            <small>Learning</small>
+            <h3>แหล่งเรียนรู้และเนื้อหาเชิงการศึกษา</h3>
+            <p>Learning Resources &amp; Educational Content สำหรับผู้ที่ต้องการเข้าใจการเยียวยาอย่างลึกและมีรากฐาน</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="resources">
+        <div class="titleRow">
+          <h2>Resources</h2>
+          <div class="sub">กำลังทยอยเพิ่มเนื้อหา</div>
+        </div>
+
+        <div class="block">
+          <p style="margin:0;color:var(--muted)">
+            เราจะเพิ่มบทความสั้น ๆ, แบบฝึก, และแนวทางการดูแลหัวใจเป็นลำดับ
+            (เร็ว ๆ นี้: หน้า “Programs”, “Sessions”, และ “Workbook”)
+          </p>
+          <ul>
+            <li>Breath &amp; Stillness Guides</li>
+            <li>Self-Healing Notes</li>
+            <li>Educational Pages (Foundations)</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="contact">
+        <div class="titleRow">
+          <h2>ติดต่อ / Follow</h2>
+          <div class="sub">Connect gently</div>
+        </div>
+
+        <div class="block">
+          <p style="margin:0 0 10px;color:var(--muted)">
+            เพิ่มลิงก์ของนิกี้ตรงนี้ได้เลย (แก้ในไฟล์ index.html)
+          </p>
+          <div class="links">
+            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ Facebook ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">Facebook</a>
+            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ YouTube ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">YouTube</a>
+            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ TikTok ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">TikTok</a>
+            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ Instagram ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">Instagram</a>
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div class="footRow">
+          <div>© <span id="y"></span> KRUNIKI</div>
+          <div style="color:rgba(219,190,123,.9)">Heart • Stillness • Healing</div>
+        </div>
+      </footer>
+    </div>
+  </main>
+
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
