--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
             เพิ่มลิงก์ของนิกี้ตรงนี้ได้เลย (แก้ในไฟล์ index.html)
           </p>
           <div class="links">
-            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ Facebook ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">Facebook</a>
-            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ YouTube ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">YouTube</a>
-            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ TikTok ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">TikTok</a>
-            <a class="btn" href="#" onclick="alert('ใส่ลิงก์ Instagram ของนิกี้ตรงนี้ได้เลยค่ะ'); return false;">Instagram</a>
+            <a class="btn" href="#" onclick="alert('https://www.facebook.com/kruniki/'); return false;">Facebook</a>
+            <a class="btn" href="#" onclick="alert('ใhttps://www.youtube.com/@kruniki'); return false;">YouTube</a>
+            <a class="btn" href="#" onclick="alert('https://www.tiktok.com/@kruniki.official); return false;">TikTok</a>
+            <a class="btn" href="#" onclick="alert('https://www.instagram.com/kruniki.official'); return false;">Instagram</a>
           </div>
         </div>
       </section>
