--- a/index.html
+++ b/index.html
@@ -265,7 +265,10 @@
             <a class="btn" href="#" onclick="alert('ใhttps://www.youtube.com/@kruniki'); return false;">YouTube</a>
             <a class="btn" href="#" onclick="alert('https://www.tiktok.com/@kruniki.official); return false;">TikTok</a>
             <a class="btn" href="#" onclick="alert('https://www.instagram.com/kruniki.official'); return false;">Instagram</a>
-          </div>
+            <a href="https://lin.ee/qdp20di target="_blank">
+               เชื่อมต่อหัวใจผ่าน LINE OA
+
+        </div>
         </div>
       </section>
 
