--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
 
   <style>
+     .topSocial {
+  position: fixed;
+  top: 14px;
+  right: 24px;
+  display: flex;
+  gap: 14px;
+  font-size: 13px;
+  z-index: 9999;
+  opacity: 0.9;
+}
+
+.topSocial a {
+  color: #d6c9a5; /* gold soft */
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.topSocial a:hover {
+  opacity: 1;
+  text-decoration: underline;
+}
+    
     :root{
       --bg:#0b0b0c;
       --card:#121214;
@@ -37,6 +59,15 @@
       border-bottom:1px solid var(--line);
     }
     .nav{
+      <div class="topSocial">
+  <a href="https://lin.ee/qdp20di" target="_blank">LINE OA</a>
+  <a href="https://shop.line.me/@mew3619k" target="_blank">LINE SHOP</a>
+  <a href="https://www.facebook.com/kruniki/" target="_blank">FB</a>
+  <a href="https://www.youtube.com/@kruniki" target="_blank">YT</a>
+  <a href="https://www.tiktok.com/@kruniki.official" target="_blank">TT</a>
+  <a href="https://www.instagram.com/kruniki.official/" target="_blank">IG</a>
+</div>
+      
       display:flex; align-items:center; justify-content:space-between;
       padding:14px 0;
       gap:12px;
