--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
 
   <style>
-   /* --- KRUNIKI Social links pinned top-right (clickable) --- */
+      /* --- KRUNIKI Social links pinned top-right (clickable) --- */
 .topSocial{
   position: fixed;
   top: 14px;
@@ -65,7 +65,7 @@
       border-bottom:1px solid var(--line);
     }
     .nav{
-      <div class="topSocial" aria-label="KRUNIKI Social Links">
+  > <div class="topSocial" aria-label="KRUNIKI Social Links">
   <a href="https://lin.ee/qdp20di" target="_blank" rel="noopener">LINE OA</a>
   <a href="https://shop.line.me/@mew3619k" target="_blank" rel="noopener">LINE SHOP</a>
   <a href="https://www.facebook.com/kruniki/" target="_blank" rel="noopener">FB</a>
