--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
     <nav aria-label="เมนูหลัก">
       <a href="#about">เกี่ยวกับ</a>
-      <a href="#services">บริการ</a>
+      <a href="services.html">บริการ</a>
       <a href="#resources">Resources</a>
       <a href="#contact">ติดต่อ</a>
     </nav>
