--- a/services.html
+++ b/services.html
@@ -387,8 +387,8 @@
         </p>
 
         <div class="ctaRow">
-          <a class="btn primary" href="contact.html">เริ่มติดต่อ / นัดหมาย</a>
-          <a class="btn" href="index.html#about">กลับหน้า Home</a>
+        <a class="btn primary" href="index.html#contact">เริ่มติดต่อ / นัดหมาย</a>
+        <a class="btn" href="index.html#about">กลับหน้า Home</a>
         </div>
       </div>
 
