--- a/services.html
+++ b/services.html
@@ -314,11 +314,12 @@
 
     <!-- ✅ เมนูแบบหลายหน้า -->
     <nav aria-label="เมนูหลัก">
-      <a href="index.html#about">เกี่ยวกับ</a>
-      <a class="active" href="services.html">บริการ</a>
-      <a href="resources.html">Resources</a>
-      <a href="contact.html">ติดต่อ</a>
-    </nav>
+  <a href="index.html#about">เกี่ยวกับ</a>
+  <a href="services.html" aria-current="page">บริการ</a>
+  <a href="index.html#resources">Resources</a>
+  <a href="index.html#contact">ติดต่อ</a>
+</nav>
+>
 
     <div class="right">
       <!-- SOCIAL ICONS (TOP RIGHT) -->
