--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
 
     <div class="banner" aria-label="KRUNIKI Banner">
       <!-- ใช้ไฟล์ใน repo ของนิกี้: home-banner.png -->
-      <img src="home-banner.png" alt="KRUNIKI — Heart Awakening Banner" />
-    </div>
+      <img src="home-banner.webp" alt="KRUNIKI — Heart Awakening Banner" loading="lazy" decoding="async" />
+   </div>
   </section>
 
   <!-- WHAT YOU'LL FIND -->
