--- a/contact.html
+++ b/contact.html
@@ -5,279 +5,10 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KRUNIKI Academy — Contact</title>
   <meta name="description" content="KRUNIKI — Contact • Follow • LINE OA" />
+   <!-- 🔗 เชื่อมไฟล์ CSS -->
+  <link rel="stylesheet" href="assets/style.css">
 
-  <style>
-    :root{
-      --bg:#070707;
-      --panel:rgba(255,255,255,.06);
-      --panel2:rgba(255,255,255,.035);
-      --stroke:rgba(255,255,255,.10);
-      --text:rgba(255,255,255,.92);
-      --muted:rgba(255,255,255,.70);
-      --muted2:rgba(255,255,255,.52);
-
-      --gold:#d6b46a;
-      --gold2:rgba(214,180,106,.72);
-      --shadow:0 14px 50px rgba(0,0,0,.55);
-
-      --r:18px;
-      --r2:22px;
-
-      --gold-font: 15.8px;
-      --gold-font-m: 15.2px;
-      --gold-letter: .2px;
-    }
-
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color:var(--text);
-      background:
-        radial-gradient(1000px 600px at 20% 10%, rgba(214,180,106,.11), transparent 55%),
-        radial-gradient(900px 600px at 80% 0%, rgba(255,255,255,.06), transparent 60%),
-        linear-gradient(180deg, #050505, #070707 45%, #050505);
-      overflow-x:hidden;
-    }
-
-    a{color:inherit;text-decoration:none}
-    .wrap{max-width:1180px;margin:0 auto;padding:22px 18px 70px}
-
-    header{
-      position:sticky; top:0; z-index:50;
-      backdrop-filter: blur(12px);
-      background: linear-gradient(180deg, rgba(0,0,0,.75), rgba(0,0,0,.35));
-      border-bottom:1px solid rgba(255,255,255,.06);
-    }
-    .topbar{
-      max-width:1180px;margin:0 auto;
-      padding:14px 18px;
-      display:flex; align-items:center; justify-content:space-between;
-      gap:14px;
-    }
-
-    .brand{
-      display:flex; align-items:center; gap:10px;
-      font-weight:800; letter-spacing:.22em;
-      text-transform:uppercase;
-      font-size:14px;
-      color: var(--gold); /* ✅ ทำ KRUNIKI เป็นสีทอง */
-    }
-    .dot{
-      width:8px;height:8px;border-radius:999px;
-      background:var(--gold);
-      box-shadow: 0 0 18px rgba(214,180,106,.55);
-      flex:0 0 auto;
-    }
-
-    nav{
-      display:flex; align-items:center; gap:18px;
-      color:var(--muted);
-      font-size:14px;
-      white-space:nowrap;
-    }
-    nav a{
-      padding:8px 10px;
-      border-radius:999px;
-      transition:.2s ease;
-    }
-    nav a:hover{background:rgba(255,255,255,.06); color:var(--text)}
-    nav a.active{
-      background: rgba(214,180,106,.12);
-      border: 1px solid rgba(214,180,106,.30);
-      color: rgba(255,255,255,.92);
-    }
-
-    .right{display:flex; align-items:center; gap:10px;}
-
-    .social{display:flex; align-items:center; gap:10px;}
-    .iconbtn{
-      width:40px;height:40px;
-      border-radius:999px;
-      background:rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.08);
-      display:grid; place-items:center;
-      box-shadow: 0 10px 22px rgba(0,0,0,.32);
-      transition:.18s ease;
-      color:rgba(255,255,255,.86)
-    }
-    .iconbtn:hover{
-      transform: translateY(-1px);
-      border-color: rgba(214,180,106,.35);
-      background: rgba(214,180,106,.10);
-    }
-    .iconbtn svg{width:18px;height:18px;opacity:.92;}
-    .iconbtn .stroke{stroke:currentColor}
-    .iconbtn .fill{fill:currentColor}
-    .iconbtn.gold{color:var(--gold)}
-
-    section{padding:26px 0}
-    .panel{
-      background: linear-gradient(180deg, rgba(255,255,255,.06), rgba(255,255,255,.04));
-      border:1px solid rgba(255,255,255,.08);
-      border-radius: var(--r2);
-      box-shadow: var(--shadow);
-    }
-
-    .hero{margin-top:22px;padding:26px;}
-    .heroGrid{
-      display:grid;
-      grid-template-columns: 1.15fr .85fr;
-      gap:18px;
-      align-items:stretch;
-    }
-
-    .goldline{
-      color:var(--gold2);
-      font-size: var(--gold-font);
-      letter-spacing: var(--gold-letter);
-      font-weight:650;
-    }
-    .goldline strong{color:var(--gold);font-weight:800}
-
-    h1{
-      margin:10px 0 12px;
-      font-size:38px;
-      line-height:1.05;
-      letter-spacing:-.02em;
-    }
-    .lead{
-      margin:0;
-      color:var(--muted);
-      font-size:16px;
-      line-height:1.8;
-      max-width:64ch;
-    }
-
-    .ctaRow{
-      margin-top:16px;
-      display:flex; flex-wrap:wrap; gap:10px;
-    }
-    .btn{
-      display:inline-flex; align-items:center; gap:10px;
-      padding:10px 14px;
-      border-radius:999px;
-      border:1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.06);
-      color:rgba(255,255,255,.88);
-      transition:.18s ease;
-      font-size:14px;
-    }
-    .btn:hover{transform: translateY(-1px); border-color: rgba(214,180,106,.35)}
-    .btn.primary{
-      background: rgba(214,180,106,.12);
-      border-color: rgba(214,180,106,.35);
-      color: rgba(255,255,255,.92);
-    }
-
-    .quoteCard{
-      border-radius: var(--r2);
-      border:1px solid rgba(255,255,255,.08);
-      background: rgba(0,0,0,.22);
-      padding:18px;
-      position:relative;
-      overflow:hidden;
-    }
-    .quoteTop{
-      display:flex; align-items:baseline; justify-content:space-between;
-      gap:10px;
-      color:rgba(255,255,255,.76);
-      font-size:14px;
-      padding-bottom:12px;
-      border-bottom:1px solid rgba(255,255,255,.08);
-    }
-    .quoteTop .leftTitle{font-weight:750;color:rgba(255,255,255,.86)}
-    .quote{
-      margin:12px 0 0;
-      color:rgba(255,255,255,.78);
-      line-height:1.8;
-      font-size:15px;
-    }
-
-    .contactGrid{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:14px;
-      margin-top:14px;
-    }
-    .card{
-      background: rgba(255,255,255,.045);
-      border:1px solid rgba(255,255,255,.08);
-      border-radius: var(--r2);
-      padding:16px 16px 14px;
-    }
-    .kicker{
-      color:var(--gold2);
-      font-weight:750;
-      font-size: var(--gold-font);
-      letter-spacing: var(--gold-letter);
-    }
-    .card h3{margin:8px 0 8px;font-size:18px;}
-    .card p{margin:0;color:var(--muted);line-height:1.75;font-size:14.5px;}
-
-    .lineCta{
-      background: rgba(214,180,106,.10);
-      border:1px solid rgba(214,180,106,.35);
-      border-radius: var(--r2);
-      padding:16px;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      gap:10px;
-      min-height: 168px;
-    }
-    .lineCtaTitle{
-      font-weight:850;
-      letter-spacing:-.01em;
-      font-size:18px;
-      display:flex; align-items:center; gap:10px;
-    }
-    .note{
-      background: rgba(255,255,255,.035);
-      border:1px solid rgba(255,255,255,.08);
-      border-radius: var(--r2);
-      padding:14px;
-      color:var(--muted);
-      line-height:1.8;
-      font-size:14.5px;
-      min-height: 168px;
-    }
-
-    .mini{
-      margin-top:14px;
-      background: rgba(255,255,255,.035);
-      border:1px solid rgba(255,255,255,.08);
-      border-radius: var(--r2);
-      padding:14px;
-      color:var(--muted);
-      line-height:1.85;
-      font-size:14.5px;
-    }
-
-    footer{
-      margin-top:22px;
-      color:rgba(255,255,255,.62);
-      font-size:13px;
-      text-align:center;
-      padding:10px 0 0;
-    }
-    footer .gold{color:var(--gold2); font-size: var(--gold-font); letter-spacing: var(--gold-letter);}
-
-    @media (max-width: 920px){
-      nav{display:none;}
-    }
-    @media (max-width: 860px){
-      :root{ --gold-font: var(--gold-font-m); }
-      .wrap{padding:18px 14px 64px}
-      .hero{padding:18px}
-      .heroGrid{grid-template-columns: 1fr; gap:14px;}
-      h1{font-size:30px}
-      .contactGrid{grid-template-columns:1fr}
-      .iconbtn{width:38px;height:38px}
-    }
-  </style>
-</head>
+  </head>
 
 <body>
 
