--- a/About.html
+++ b/About.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KRUNIKI Academy</title>
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
+  <link rel="stylesheet" href="assets/style.css">
 
   <style>
     :root{
