--- a/About.html
+++ b/About.html
@@ -374,3 +374,88 @@
 <body>
 
 <header>
+  <main class="wrap">
+    
+<section class="panel hero">
+  <div class="heroGrid">
+
+    <div class="heroText">
+      <div class="goldline">About • เกี่ยวกับ <strong>KRUNIKI</strong></div>
+      <h1>KRUNIKI System</h1>
+      <p class="lead">
+        KRUNIKI คือระบบการเรียนรู้และการปฏิบัติ
+        ที่ออกแบบมาเพื่อพาผู้เรียนกลับมารับรู้ศูนย์กลางภายในของตนเองอย่างเป็นลำดับ
+      </p>
+    </div>
+
+    <div class="quoteCard">
+      <div class="quoteTop">
+        <div class="leftTitle">System Direction</div>
+        <div>Inner Center</div>
+      </div>
+      <p class="quote">
+        KRUNIKI ทำหน้าที่เป็นระบบนำทาง
+        ที่จัดโครงสร้างการเรียนรู้และการปฏิบัติอย่างเป็นลำดับ
+      </p>
+    </div>
+
+  </div>
+</section>
+    
+<section>
+  <div class="panel">
+    <div class="resHead">
+      <h2>KRUNIKI System</h2>
+      <div class="resTag">Learning & Practice</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        KRUNIKI System เป็นระบบที่รวมการเรียนรู้และการปฏิบัติเข้าด้วยกัน
+        โดยใช้สติ ความนิ่ง และลมหายใจเป็นแกนหลักของการฝึก
+      </div>
+    </div>
+  </div>
+</section>
+
+    <section>
+  <div class="panel">
+    <div class="resHead">
+      <h2>Core Practice</h2>
+      <div class="resTag">Mindfulness • Stillness • Breath</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        การปฏิบัติใน KRUNIKI ยืนอยู่บนการฝึกสติ
+        ความนิ่งภายใน และการใช้ลมหายใจเป็นเครื่องมือแกนหลัก
+        ในการกลับมารับรู้และปรับสมดุล
+      </div>
+    </div>
+  </div>
+</section>
+
+    <section>
+  <div class="panel">
+    <div class="resHead">
+      <h2>Who KRUNIKI Is For</h2>
+      <div class="resTag">Grounded Learning</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        KRUNIKI เหมาะสำหรับผู้ที่ต้องการระบบการเรียนรู้และการปฏิบัติ
+        ที่ชัดเจน ยืนพื้น และสามารถนำไปใช้ในชีวิตจริงได้
+      </div>
+    </div>
+  </div>
+</section>
+
+    <footer>
+  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+</footer>
+
+
+</main>
+</body>
+</html>
