--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <nav aria-label="เมนูหลัก">
-      <a href="#about">เกี่ยวกับ</a>
+      <a href=“about.html">About</a
       <a href="services.html">บริการ</a>
       <a href="#resources">Resources</a>
       <a href="#contact">ติดต่อ</a>
