--- a/About.html
+++ b/About.html
@@ -382,7 +382,7 @@
 
     <!-- ✅ เมนูแบบหลายหน้า -->
     <nav aria-label="เมนูหลัก">
-  <a href="index.html#about">เกี่ยวกับ</a>
+  <a href="index.html#about" aria-current="page">เกี่ยวกับ</a>
   <a href="services.html" aria-current="page">บริการ</a>
   <a href="index.html#resources">Resources</a>
   <a href="index.html#contact">ติดต่อ</a>
