--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </div>
 
     <nav aria-label="เมนูหลัก">
-      <a href=“about.html">About</a
-      <a href="services.html">บริการ</a>
-      <a href="#resources">Resources</a>
-      <a href="#contact">ติดต่อ</a>
+     <a href="about.html">About</a>
+     <a href="services.html">บริการ</a>
+     <a href="#resources">Resources</a>
+     <a href="#contact">ติดต่อ</a>
     </nav>
 
     <div class="right">
