--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <span>K R U N I K I</span>
     </div>
 
-    <nav> aria-label="เมนูหลัก">
+    <nav aria-label="เมนูหลัก">
      <a href="about.html">About</a>
      <a href="services.html">บริการ</a>
      <a href="#resources">Resources</a>
