--- a/services.html
+++ b/services.html
@@ -119,13 +119,16 @@
     </div>
 
     <div class="grid2">
-      <div class="card">
-        <div class="kicker">1) 20-Minute Session</div>
-        <h3>KRUNIKI Healing Heart / Heart Awakening — 20 นาที</h3>
-        <p>
-          พื้นที่รับฟังใจแบบปลอดภัย เหมาะสำหรับ “อยากเบาลงทันที” และกลับสู่ baseline ของระบบประสาท
-        </p>
-      </div>
+      <a class="card cardLink" href="service-20min.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
+  <div class="kicker">1) 20-Minute Session</div>
+  <h3>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</h3>
+  <p>
+    พื้นที่รับฟังใจแบบปลอดภัย เหมาะสำหรับ “อยากเบาลงทันที”
+    และกลับสู่ baseline ของระบบประสาท
+  </p>
+  </a
+ 
 
       <div class="card">
         <div class="kicker">2) Private Guidance</div>
