--- a/service-20min.html
+++ b/service-20min.html
@@ -72,6 +72,112 @@
 
 <main class="wrap">
   <section class="panel hero">
+  <!-- =========================
+     Step 2 — รายละเอียดบริการ (ปลอดภัย)
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Step 2 — รายละเอียดบริการ</h2>
+    <div class="resTag">Who it’s for • Flow • What you take back</div>
+  </div>
+
+  <div class="resBody">
+    <div class="resBox">
+      <p style="margin:0 0 10px;">
+        บริการ <strong>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</strong>
+        เป็นช่วงเวลาสั้น ๆ ที่ออกแบบให้ “กลับมารับรู้ศูนย์กลางภายใน” อย่างเป็นลำดับ
+        โดยยืนพื้นด้วย <strong>สติ</strong> <strong>ความนิ่ง</strong> และ <strong>ลมหายใจ</strong>
+        ในแนวทางของ <strong>KRUNIKI SoulSync System™</strong>
+      </p>
+      <p style="margin:0;">
+        หมายเหตุ: หน้านี้ตั้งใจเขียน “พอให้ตัดสินใจได้” โดยไม่เปิดเผยขั้นตอนภายในละเอียดเกินไป
+      </p>
+    </div>
+
+    <!-- 1) เหมาะกับใคร / ไม่เหมาะกับใคร -->
+    <div class="grid2" style="margin-top:14px;">
+      <div class="card">
+        <div class="kicker">เหมาะกับใคร</div>
+        <h3>สำหรับคนที่อยากกลับมานิ่งและชัดขึ้น</h3>
+        <ul class="list" style="margin-top:10px;">
+          <li>รู้สึกใจแน่น วุ่นวาย เหนื่อยล้าทางอารมณ์ และอยาก “กลับมาหายใจให้โล่ง”</li>
+          <li>ต้องการพื้นที่สั้น ๆ เพื่อ “จัดระเบียบความรู้สึก” ก่อนตัดสินใจเรื่องสำคัญ</li>
+          <li>อยากเริ่มต้นการเรียนรู้และการปฏิบัติแบบยืนพื้น ไม่ซับซ้อน</li>
+          <li>อยากมีโครงสร้างนำทางที่เป็นลำดับ โดยยังเคารพจังหวะของตัวเอง</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <div class="kicker">ยังไม่เหมาะในตอนนี้</div>
+        <h3>เพื่อความปลอดภัยของคุณ</h3>
+        <ul class="list" style="margin-top:10px;">
+          <li>อยู่ในภาวะฉุกเฉินด้านสุขภาพกาย/จิต หรือเสี่ยงอันตรายทันที</li>
+          <li>ต้องการการวินิจฉัยหรือการรักษาทางการแพทย์/จิตเวชโดยตรง</li>
+          <li>ไม่สะดวกอยู่ในพื้นที่ที่ปลอดภัย/เป็นส่วนตัวระหว่างรับบริการ</li>
+          <li>ต้องการ “คำตอบสำเร็จรูป” มากกว่าการกลับมารับรู้ภายในอย่างเป็นลำดับ</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 2) โครงสร้าง 20 นาที (บอกเป็นลำดับแบบปลอดภัย) -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2>โครงสร้าง 20 นาที (เป็นลำดับแบบปลอดภัย)</h2>
+      <p class="small">
+        โครงสร้างนี้บอก “ทิศทางการทำงาน” ให้เห็นภาพรวม โดยไม่ลงรายละเอียดเชิงเทคนิค
+      </p>
+
+      <div class="grid2" style="margin-top:10px;">
+        <div class="card">
+          <div class="kicker">ลำดับ 1</div>
+          <h3>ตั้งหลักและกลับมารับรู้</h3>
+          <p>
+            เริ่มจากการปรับจังหวะให้ร่างกายและใจ “อยู่กับปัจจุบัน”
+            เพื่อให้คุณกลับมารับรู้ตัวเองได้ชัดขึ้น
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">ลำดับ 2</div>
+          <h3>ฟังหัวใจอย่างตรงไปตรงมา</h3>
+          <p>
+            เปิดพื้นที่ให้ความรู้สึกที่สำคัญ “ได้ถูกเห็น” อย่างไม่ตัดสิน
+            โดยเน้นความปลอดภัยและความพอดี
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">ลำดับ 3</div>
+          <h3>กลับสู่ความนิ่งและปรับสมดุล</h3>
+          <p>
+            ใช้ลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล
+            เพื่อให้ใจเบาและนิ่งขึ้น
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">ลำดับ 4</div>
+          <h3>สรุปสิ่งที่ “พากลับไป”</h3>
+          <p>
+            ปิดท้ายด้วยการสรุปภาพรวมแบบกระชับ
+            เพื่อให้คุณกลับไปใช้ในชีวิตจริงได้ทันที
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- 3) สิ่งที่ผู้รับบริการจะได้กลับไป -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2>สิ่งที่คุณจะได้กลับไปพร้อมกับตัวเอง</h2>
+      <ul class="list">
+        <li>ความนิ่งที่มากขึ้น และความชัดที่มากขึ้น (แม้เป็นช่วงเวลาสั้น ๆ)</li>
+        <li>จุดยึดกลับมารับรู้ศูนย์กลางภายในได้ง่ายขึ้นในชีวิตประจำวัน</li>
+        <li>แนวทางดูแลตัวเองแบบยืนพื้น (ไม่ซับซ้อน) ที่ทำต่อได้</li>
+        <li>ความรู้สึกว่า “ฉันกลับมาหาตัวเองได้” โดยไม่ต้องฝืน</li>
+      </ul>
+    </div>
+  </div>
+</section>
+    
     <div class="heroGrid">
       <div class="heroText">
         <div class="goldline">Service • รายละเอียดบริการ</div>
