--- a/service-20min.html
+++ b/service-20min.html
@@ -177,6 +177,122 @@
     </div>
   </div>
 </section>
+
+<!-- =========================
+     Step 3 — ขอบเขตบริการ / รูปแบบ / สิ่งที่ควรรู้
+========================= -->
+<section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>Step 3 — ขอบเขตบริการและรูปแบบการให้บริการ</h2>
+    <div class="resTag">Scope • Format • What to expect</div>
+  </div>
+
+  <div class="resBody">
+
+    <!-- 3.1 ขอบเขตบริการ (ปลอดภัย / ยืนพื้น) -->
+    <div class="subPanel">
+      <h2>ขอบเขตบริการ (Scope)</h2>
+      <p class="small">
+        เพื่อให้ชัดเจนและปลอดภัย: บริการนี้เป็นพื้นที่ “การเรียนรู้และการปฏิบัติ” ในแนวทาง KRUNIKI SoulSync System™
+        ไม่ใช่การวินิจฉัยหรือการรักษาทางการแพทย์/จิตเวช
+      </p>
+
+      <div class="grid2" style="margin-top:10px;">
+        <div class="card">
+          <div class="kicker">สิ่งที่ทำในช่วง 20 นาที</div>
+          <h3>นำทางกลับมารับรู้ศูนย์กลางภายใน</h3>
+          <ul class="list" style="margin-top:10px;">
+            <li>จัดพื้นที่ให้ “กลับมารับรู้” ด้วยสติและความนิ่ง</li>
+            <li>ใช้ลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล</li>
+            <li>ฟังหัวใจอย่างตรงไปตรงมา เพื่อเห็นสิ่งสำคัญในตอนนี้</li>
+            <li>สรุปสิ่งที่คุณ “พากลับไปใช้” ได้ในชีวิตจริง</li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <div class="kicker">สิ่งที่บริการนี้ไม่ได้ทำ</div>
+          <h3>เพื่อไม่ให้ความคาดหวังคลาดเคลื่อน</h3>
+          <ul class="list" style="margin-top:10px;">
+            <li>ไม่วินิจฉัยอาการหรือให้คำแนะนำทางการแพทย์</li>
+            <li>ไม่รับประกันผลลัพธ์แบบสำเร็จรูป</li>
+            <li>ไม่ลงรายละเอียด “กระบวนการภายใน” เชิงเทคนิคบนหน้าเว็บไซต์</li>
+            <li>ไม่บังคับให้คุณเล่าทุกอย่าง—คุณเลือกเล่าเท่าที่ปลอดภัยได้</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- 3.2 รูปแบบการให้บริการ -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2>รูปแบบการให้บริการ (Format)</h2>
+      <div class="grid2" style="margin-top:10px;">
+        <div class="card">
+          <div class="kicker">ช่องทาง</div>
+          <h3>Online / นัดหมายล่วงหน้า</h3>
+          <p>
+            ให้บริการแบบออนไลน์เป็นหลัก (ตามที่ตกลงตอนนัดหมาย)
+            เพื่อให้คุณอยู่ในพื้นที่ของตัวเองอย่างปลอดภัยและเป็นส่วนตัว
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">เวลา</div>
+          <h3>20 นาที (กระชับและมีโครงสร้าง)</h3>
+          <p>
+            เหมาะสำหรับการ “ตั้งหลัก-กลับมารับรู้-ปรับสมดุล”
+            และพากลับไปใช้ในชีวิตจริงได้ทันที
+          </p>
+        </div>
+      </div>
+
+      <div class="resBox" style="margin-top:12px;">
+        <strong>สิ่งที่ควรรู้:</strong>
+        ถ้าคุณต้องการดูแลต่อเนื่องแบบเป็นลำดับ (รายสัปดาห์/รายเดือน)
+        KRUNIKI มีรูปแบบ <em>Private Guidance</em> แยกต่างหาก
+        ซึ่งจะลึกและยาวกว่า 20 นาที
+      </div>
+    </div>
+
+    <!-- 3.3 ความคาดหวังที่เหมาะสม -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2>ความคาดหวังที่เหมาะสม (What to Expect)</h2>
+      <div class="grid2" style="margin-top:10px;">
+        <div class="card">
+          <div class="kicker">หลังจบเซสชัน</div>
+          <h3>คุณจะรู้สึก “กลับมาอยู่กับตัวเอง” มากขึ้น</h3>
+          <p>
+            หลายคนจะรู้สึกใจเบาขึ้น นิ่งขึ้น หรือชัดขึ้นในสิ่งสำคัญ
+            แต่ผลลัพธ์ของแต่ละคนไม่เหมือนกัน เพราะขึ้นกับจังหวะของชีวิตและหัวใจในช่วงนั้น
+          </p>
+        </div>
+
+        <div class="card">
+          <div class="kicker">ความต่อเนื่อง</div>
+          <h3>ยิ่งฝึกยิ่งนิ่ง (แบบยืนพื้น)</h3>
+          <p>
+            บริการ 20 นาทีเป็น “จุดเริ่มต้น” ที่ดี
+            ถ้าคุณอยากให้ความนิ่งและการรับรู้คงที่ขึ้น
+            การเรียนรู้และการปฏิบัติอย่างต่อเนื่องจะช่วยได้มาก
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- CTA ปิดท้าย Step 3 -->
+    <div class="subPanel" style="margin-top:14px;">
+      <h2>ถ้าคุณรู้สึกว่า “ใช่”</h2>
+      <p class="small">
+        ไปต่อ Step 4 แล้วเราจะทำ “วิธีนัดหมาย + การเตรียมตัวก่อนรับบริการ” ให้เป็นขั้นตอนที่ชัดและอบอุ่น
+      </p>
+      <div class="ctaRow">
+        <a class="btn primary" href="index.html#contact">เริ่มติดต่อ / นัดหมาย</a>
+        <a class="btn" href="services.html">กลับหน้าบริการ</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
     
     <div class="heroGrid">
       <div class="heroText">
