--- a/service-20min.html
+++ b/service-20min.html
@@ -293,6 +293,127 @@
   </div>
 </section>
 
+    <!-- ========================= -->
+<!-- STEP 4 — วิธีนัดหมาย / การเตรียมตัวก่อนรับบริการ -->
+<!-- วางบล็อกนี้ต่อจาก Step 3 ใน <section class="panel hero"> -->
+<!-- ========================= -->
+
+<div class="subPanel" style="margin-top:16px;">
+  <h2>Step 4 — วิธีนัดหมาย / การเตรียมตัวก่อนรับบริการ</h2>
+  <p class="small">
+    เนื้อหาส่วนนี้เขียนเพื่อให้ผู้รับบริการเข้าใจ “วิธีเริ่มต้น” และ “การเตรียมตัวที่พอดี”
+    โดยยึดกรอบการดูแลของ KRUNIKI SoulSync System™
+  </p>
+</div>
+
+<section style="padding-top:0;">
+  <div class="panel">
+    <div class="resHead">
+      <h2>วิธีนัดหมาย (How to Book)</h2>
+      <div class="resTag">Contact • Scheduling</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        การนัดหมายบริการ <strong>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</strong>
+        ทำผ่านการติดต่อโดยตรง เพื่อให้การดูแลเหมาะกับแต่ละบุคคลมากที่สุด
+        <ul class="list">
+          <li>ติดต่อผ่าน LINE OA ของ KRUNIKI</li>
+          <li>แจ้งความต้องการเบื้องต้น และช่วงเวลาที่สะดวก</li>
+          <li>รับคำแนะนำก่อนเริ่มบริการอย่างเป็นส่วนตัว</li>
+        </ul>
+        KRUNIKI เลือกใช้การนัดหมายแบบนี้ เพื่อรักษาคุณภาพ ความปลอดภัย
+        และบรรยากาศที่อ่อนโยนของการดูแล
+      </div>
+    </div>
+  </div>
+</section>
+
+<section style="padding-top:14px;">
+  <div class="panel">
+    <div class="resHead">
+      <h2>การเตรียมตัวก่อนรับบริการ (Before the Session)</h2>
+      <div class="resTag">Simple • Grounded</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        ไม่จำเป็นต้องมีประสบการณ์มาก่อน และไม่ต้องเตรียมตัวให้ “พิเศษ” กว่าความเป็นจริง
+        <ul class="list">
+          <li>เลือกช่วงเวลาที่คุณไม่ต้องรีบ</li>
+          <li>อยู่ในพื้นที่ที่รู้สึกปลอดภัยและเงียบพอ</li>
+          <li>เปิดใจรับฟังตัวเอง โดยไม่คาดหวังผลลัพธ์</li>
+        </ul>
+        บริการนี้ออกแบบมาเพื่อให้คุณ “กลับมาอยู่กับตัวเอง” อย่างเป็นธรรมชาติ
+        ไม่ต้องฝืน ไม่ต้องเร่ง และไม่ต้องพิสูจน์อะไร
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ========================= -->
+<!-- STEP 5 — ขอบเขต & ความคาดหวัง (Safety & Boundary) -->
+<!-- ========================= -->
+
+<div class="subPanel" style="margin-top:16px;">
+  <h2>Step 5 — ขอบเขต & ความคาดหวัง (Safety & Boundary)</h2>
+  <p class="small">
+    เพื่อความชัดเจนและปลอดภัย KRUNIKI สื่อสาร “ขอบเขตของบริการ” และ “ความคาดหวังที่เหมาะสม”
+    ให้ผู้รับบริการตัดสินใจได้ด้วยความสบายใจ
+  </p>
+</div>
+
+<section style="padding-top:0;">
+  <div class="panel">
+    <div class="resHead">
+      <h2>ขอบเขตของบริการ</h2>
+      <div class="resTag">Scope • Ethics</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <strong>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</strong>
+        เป็นพื้นที่การดูแลเชิงสติและการรับรู้ภายใน ภายใต้กรอบของ
+        <strong>KRUNIKI SoulSync System™</strong>
+        <ul class="list">
+          <li>ไม่ใช่การบำบัดทางการแพทย์</li>
+          <li>ไม่ใช่การวินิจฉัยหรือรักษาโรค</li>
+          <li>ไม่ทดแทนการดูแลจากผู้เชี่ยวชาญด้านสุขภาพจิตหรือแพทย์</li>
+        </ul>
+        แต่เป็นพื้นที่ปลอดภัยสำหรับการกลับมารับฟังหัวใจ และปรับสมดุลภายในอย่างอ่อนโยน
+      </div>
+    </div>
+  </div>
+</section>
+
+<section style="padding-top:14px;">
+  <div class="panel">
+    <div class="resHead">
+      <h2>ความคาดหวังที่เหมาะสม</h2>
+      <div class="resTag">Expectations • Realistic</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        ผลลัพธ์ของแต่ละคนอาจไม่เหมือนกัน บางคนรู้สึกเบาลงทันที
+        บางคนเพียงรับรู้บางอย่างที่ไม่เคยฟังมาก่อน
+        <ul class="list">
+          <li>KRUNIKI ไม่สัญญาผลลัพธ์แบบตายตัว</li>
+          <li>ยึดความจริงของประสบการณ์ตรง และเคารพจังหวะของแต่ละคน</li>
+          <li>ตั้งใจให้เป็นพื้นที่ที่คุณกลับมา “อยู่กับตัวเอง” ได้อย่างพอดี</li>
+        </ul>
+        นี่คือพื้นที่ที่คุณไม่ต้อง “เป็นอะไรเพิ่ม” แค่ได้กลับมาเป็นตัวเอง ในแบบที่เป็นอยู่
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- (Optional) ปุ่มเรียกให้จอง/ติดต่อ เพิ่มไว้ท้าย Step 5 ได้ -->
+<div class="ctaRow" style="margin-top:16px;">
+  <a class="btn primary" href="index.html#contact">ติดต่อ / นัดหมาย</a>
+  <a class="btn" href="services.html">กลับหน้า Services</a>
+</div>
+    
       <div class="heroGrid">
       <div class="heroText">
         <div class="goldline">Service • รายละเอียดบริการ</div>
