--- a/service-20min.html
+++ b/service-20min.html
@@ -413,6 +413,100 @@
   <a class="btn primary" href="index.html#contact">ติดต่อ / นัดหมาย</a>
   <a class="btn" href="services.html">กลับหน้า Services</a>
 </div>
+
+<!-- STEP 6 -->
+<div class="subPanel">
+  <h2>Step 6 — หลังจบการปลุกหัวใจ 20 นาที</h2>
+  <p class="small">
+    (After the Session • Gentle Integration)
+  </p>
+</div>
+
+<section>
+  <div class="panel">
+    <div class="resHead">
+      <h2>การบูรณาการอย่างอ่อนโยน</h2>
+      <div class="resTag">Stillness • Mindfulness • Breath</div>
+    </div>
+
+    <div class="resBody">
+      <div class="resBox">
+        <p style="margin:0 0 10px 0;">
+          หลังจากจบ <strong>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</strong>
+          สิ่งสำคัญไม่ใช่การเร่งเปลี่ยน แต่คือการให้หัวใจค่อย ๆ ปรับสมดุลในจังหวะของตัวเอง
+        </p>
+
+        <div style="margin-top:10px;">
+          <div class="kicker">สิ่งที่อาจเกิดขึ้นหลังการรับบริการ</div>
+          <ul style="margin:10px 0 0 18px;">
+            <li>รู้สึกเบาขึ้น โล่งขึ้น หรือสงบขึ้น</li>
+            <li>รู้สึกอ่อนไหวขึ้นเล็กน้อย (เป็นภาวะปกติของการเปิดรับ)</li>
+            <li>รู้สึกนิ่ง เงียบ และต้องการพื้นที่ส่วนตัว</li>
+          </ul>
+          <p style="margin:10px 0 0 0;">
+            ทั้งหมดนี้ถือว่าเป็นภาวะปกติ และไม่จำเป็นต้องรีบตีความหรือเร่งจัดการใด ๆ
+          </p>
+        </div>
+
+        <div style="margin-top:14px;">
+          <div class="kicker">แนวทางดูแลตัวเองอย่างอ่อนโยน (แนะนำ)</div>
+          <ul style="margin:10px 0 0 18px;">
+            <li>ดื่มน้ำสะอาด หรือเครื่องดื่มอุ่น ๆ</li>
+            <li>หลีกเลี่ยงกิจกรรมที่กระตุ้นอารมณ์ทันทีหลังจบ</li>
+            <li>หากมีเวลา พักเงียบ ๆ 10–15 นาที</li>
+            <li>รับฟังร่างกายและหัวใจ โดยไม่ต้องทำให้ “ถูก”</li>
+          </ul>
+
+          <div class="note" style="margin-top:12px;">
+            การบูรณาการที่ดีที่สุด คือการให้พื้นที่กับสิ่งที่เพิ่งคลี่คลาย
+            โดยไม่เร่ง ไม่ฝืน และไม่คาดหวังผลลัพธ์
+          </div>
+        </div>
+
+        <div style="margin-top:14px;">
+          <div class="kicker">หากต้องการการดูแลต่อเนื่อง</div>
+          <p style="margin:10px 0 0 0;">
+            สำหรับบางคน การปลุกหัวใจ 20 นาที อาจเป็น “จุดเริ่มต้นที่ใช่”
+            หากคุณรู้สึกว่าอยากเข้าใจตัวเองลึกขึ้น จัดระเบียบหัวใจและชีวิตเป็นลำดับ
+            หรือมีพื้นที่ดูแลอย่างต่อเนื่องและปลอดภัย คุณสามารถพูดคุยเพื่อดูแนวทางถัดไปได้
+            โดยไม่มีข้อผูกมัด และไม่มีแรงกดดัน
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- CTA ปิดท้ายหน้า -->
+<section>
+  <div class="panel">
+    <div class="contactHead">
+      <h2>พร้อมเริ่มต้นแบบอ่อนโยนไหม</h2>
+      <div class="small">Next step • นัดหมาย / สอบถาม</div>
+    </div>
+
+    <div class="contactGrid">
+      <div class="note">
+        ถ้าคุณอยากเริ่มจากจุดที่เบาที่สุด<br/>
+        คุณสามารถส่งข้อความมาหา KRUNIKI ได้เลย<br/><br/>
+        เราจะคุยกันแบบเรียบง่าย ชัดเจน และให้เกียรติจังหวะของคุณ
+      </div>
+
+      <div class="lineCta">
+        <div class="lineCtaTitle">ติดต่อผ่าน LINE OA</div>
+        <div class="small" style="color:var(--muted2);">
+          แจ้งคำว่า: “ปลุกหัวใจ 20 นาที” เพื่อเริ่มนัดหมาย
+        </div>
+        <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">
+          เปิด LINE OA
+        </a>
+        <a class="btn" href="services.html">
+          กลับหน้า Services
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
     
       <div class="heroGrid">
       <div class="heroText">
