--- a/service-20min.html
+++ b/service-20min.html
@@ -70,7 +70,11 @@
   </div>
 </header>
 
-<main class="wrap">
+ </div>
+  </div>
+</section>
+  
+  <main class="wrap">
   <section class="panel hero">
   <div class="heroGrid">
       <div class="heroText">
