--- a/service-20min.html
+++ b/service-20min.html
@@ -84,8 +84,16 @@
           Session สั้นที่ “ชัดและตรง” สำหรับวันที่อยากกลับมารับรู้ตัวเองอีกครั้ง
           ด้วยสติ ความนิ่ง และการใช้ลมหายใจเป็นเครื่องมือแกนหลักในการกลับมารับรู้และปรับสมดุล
           แบบเป็นลำดับที่ทำได้จริง
-        </p>
-    
+     </p>
+
+         <div class="subPanel" style="margin-top:16px;">
+      <h2>ภาพรวม (Overview)</h2>
+      <p class="small">
+        หน้านี้คือรายละเอียดของบริการ “KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที”
+        เพื่อให้คุณตัดสินใจได้ง่าย ว่าตอนนี้เหมาะกับคุณหรือไม่ และควรเริ่มอย่างไร
+      </p>
+    </div>
+        
    <!-- =========================
      Step 2 — รายละเอียดบริการ (ปลอดภัย)
 ========================= -->
