--- a/service-20min.html
+++ b/service-20min.html
@@ -94,6 +94,10 @@
       </p>
     </div>
         
+   </div><!-- /.heroText -->
+    </div><!-- /.heroGrid -->
+  </section><!-- /.panel.hero -->  
+    
    <!-- =========================
      Step 2 — รายละเอียดบริการ (ปลอดภัย)
 ========================= -->
