--- a/service-20min.html
+++ b/service-20min.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="th">
-<head>
+<style>
+  /* ทำให้ Step 1 (hero) เป็น 1 คอลัมน์ = เต็มหน้า */
+  .heroGrid { grid-template-columns: 1fr !important; }
+</style>
+  
+  <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที</title>
