--- a/index.html
+++ b/index.html
@@ -12,7 +12,35 @@
 </head>
 
 <body>
+<header class="siteHeader">
+  <div class="navInner">
+    <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+      <span class="dot"></span><span class="brandText">KRUNIKI</span>
+    </a>
 
+    <!-- Desktop nav -->
+    <nav class="navLinks" aria-label="Primary">
+      <a href="about.html">เกี่ยวกับ</a>
+      <a href="services.html">บริการ</a>
+      <a href="resources.html">Resources</a>
+      <a href="index.html#contact">ติดต่อ</a>
+    </nav>
+
+    <!-- Mobile toggle -->
+    <button class="navToggle" type="button" aria-label="Open menu" aria-expanded="false">
+      ☰
+    </button>
+  </div>
+
+  <!-- Mobile drawer -->
+  <nav class="navDrawer" aria-label="Mobile">
+    <a href="about.html">เกี่ยวกับ</a>
+    <a href="services.html">บริการ</a>
+    <a href="resources.html">Resources</a>
+    <a href="index.html#contact">ติดต่อ</a>
+  </nav>
+</header>
+  
 <header>
   <div class="topbar">
     <div class="brand" aria-label="KRUNIKI">
