--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
 </head>
 
+<script>
+  const toggle = document.querySelector('.navToggle');
+  const nav = document.querySelector('.navLinks');
+
+  toggle.addEventListener('click', () => {
+    const opened = nav.classList.toggle('active');
+    toggle.setAttribute('aria-expanded', opened);
+  });
+</script>
+  
 <body>
 <header class="siteHeader">
   <div class="navInner">
