--- a/index.html
+++ b/index.html
@@ -157,11 +157,16 @@
     </div>
 
     <div class="grid2">
-      <div class="card">
-        <div class="kicker">20-Minute Session</div>
-        <h3>KRUNIKI Heart Awakening — Session 20 นาที</h3>
-        <p>พื้นที่ปลอดภัยสำหรับการรับฟังใจ เยียวยา และกลับสู่ศูนย์กลางภายใน</p>
-      </div>
+  <a href="service-20min.html" class="card cardLink" aria-label="ไปหน้าบริการ KRUNIKI Heart Awakening 20 นาที">
+    <div class="kicker">20-Minute Session</div>
+    <h3>KRUNIKI Heart Awakening — Session 20 นาที</h3>
+    <p>พื้นที่ปลอดภัยสำหรับการรับฟังใจ เยียวยา และกลับสู่ศูนย์กลางภายใน</p>
+
+    <div class="cardAction">
+      <span class="btnGhost">ดูรายละเอียดบริการ →</span>
+    </div>
+  </a>
+</div>
 
       <div class="card">
         <div class="kicker">Programs</div>
