--- a/services.html
+++ b/services.html
@@ -130,13 +130,15 @@
  </a>
  
 
-      <div class="card">
-        <div class="kicker">2) Private Guidance</div>
-        <h3>การดูแลต่อเนื่องแบบส่วนตัว (รายเดือน / แพ็กเกจ)</h3>
-        <p>
-          สำหรับคนที่อยากจัดระบบชีวิต-หัวใจแบบจริงจัง เป็นขั้น เป็นลำดับ และมีผู้ชี้ทางที่เข้าใจ
-        </p>
-      </div>
+      <a class="card cardLink" href="service-private.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว">
+  <div class="kicker">2) Private Guidance</div>
+  <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
+  <p>
+    สำหรับคนที่อยากจัดระบบชีวิต-หัวใจแบบจริงจัง เป็นขั้น เป็นลำดับ
+    และมีผู้ชี้ทางที่เข้าใจ
+  </p>
+</a>
 
       <div class="card">
         <div class="kicker">3) Programs</div>
