--- a/service-programs.html
+++ b/service-programs.html
@@ -14,30 +14,34 @@
 
 <body>
 
-<header>
-  <div class="topbar">
-    <div class="brand" aria-label="KRUNIKI">
-      <span class="dot" aria-hidden="true"></span>
-      <span>K R U N I K I</span>
-    </div>
+<header class="siteHeader">
+  <div class="navInner">
+    <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+      <span class="dot"></span><span class="brandText">KRUNIKI</span>
+    </a>
 
-    <!-- เมนูหลัก -->
-    <nav aria-label="เมนูหลัก">
-      <a href="index.html#about">เกี่ยวกับ</a>
-      <a href="services.html" aria-current="page">บริการ</a>
-      <a href="index.html#resources">Resources</a>
+    <!-- Desktop nav -->
+    <nav class="navLinks" aria-label="Primary">
+      <a href="about.html">เกี่ยวกับ</a>
+      <a href="services.html">บริการ</a>
+      <a href="resources.html">Resources</a>
       <a href="index.html#contact">ติดต่อ</a>
     </nav>
 
-    <!-- Hamburger (mobile) -->
-    <button class="hamburger" aria-label="เปิดเมนู">
-      <span></span>
-      <span></span>
-      <span></span>
+    <!-- Mobile toggle -->
+    <button class="navToggle" type="button" aria-label="Open menu" aria-expanded="false">
+      ☰
     </button>
   </div>
-</header>
 
+  <!-- Mobile drawer -->
+  <nav class="navDrawer" aria-label="Mobile">
+    <a href="about.html">เกี่ยวกับ</a>
+    <a href="services.html">บริการ</a>
+    <a href="resources.html">Resources</a>
+    <a href="index.html#contact">ติดต่อ</a>
+  </nav>
+</header>
 <main class="wrap">
   
   <!-- =========================
@@ -81,3 +85,50 @@ Step 1 — Programs (Hero)
 
   </div>
 </section>
+
+ </main>
+
+<footer>
+  © 2026 KRUNIKI • <span class="gold">Heart Stillness Healing</span>
+</footer>
+
+<!-- JS สำหรับ hamburger (ใช้ตัวเดียวกับหน้าอื่น) -->
+<script src="assets/main.js"></script>
+
+<script>
+(function () {
+  const header = document.querySelector('header.siteHeader');
+  const btn = document.querySelector('.navToggle');
+  if (!header || !btn) return;
+
+  const closeMenu = () => {
+    header.classList.remove('isOpen');
+    btn.setAttribute('aria-expanded', 'false');
+  };
+
+  const isOpen = () => header.classList.contains('isOpen');
+
+  btn.addEventListener('click', function () {
+    const open = header.classList.toggle('isOpen');
+    btn.setAttribute('aria-expanded', open ? 'true' : 'false');
+  });
+
+  // คลิกนอกเมนูให้ปิด
+  document.addEventListener('click', function (e) {
+    if (!isOpen()) return;
+    if (!header.contains(e.target)) closeMenu();
+  });
+
+  // กด Esc ให้ปิด
+  document.addEventListener('keydown', function (e) {
+    if (e.key === 'Escape' && isOpen()) closeMenu();
+  });
+
+  // ขยายเป็น desktop ให้ปิดเมนู mobile
+  window.addEventListener('resize', function () {
+    if (window.innerWidth > 768) closeMenu();
+  });
+})();
+</script>  
+</body>
+</html>
