--- a/services.html
+++ b/services.html
@@ -140,13 +140,13 @@
   </p>
 </a>
 
-      <div class="card">
-        <div class="kicker">3) Programs</div>
-        <h3>โปรแกรม Self-Healing (คอร์ส / เวิร์กช็อป)</h3>
-        <p>
-          เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”
-        </p>
-      </div>
+      <a class="card" href="service-programs.html">
+  <div class="kicker">3) Programs</div>
+  <h3>โปรแกรม Self-Healing (คอร์ส / เวิร์กช็อป)</h3>
+  <p>
+    เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”
+  </p>
+</a>
 
       <div class="card">
         <div class="kicker">4) Tools & Practices</div>
